--- a/css/styles.css
+++ b/css/styles.css
@@ -73,8 +73,9 @@ a:hover {
 
 .copyright {
     color: #EAF6F6;
-    font-size: 1rem;
-    margin-bottom: 0;    
+    font-size: 0.9rem;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0;       
 }
 
 .skill-row {
